# tensorflow.dart

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  analysis_options.yaml  pubspec.yaml  vagrant.sh
example/: binary.dart  dataset.dart  export_graph_def.dart  func.dart  gradient.dart  gradient_descent.dart  gradient_tape.dart  import_graph_def.dart  import_graph_def.py  import_saved_model.dart  import_saved_model.py  label_image.dart  linear_regression.dart  main.dart  neural_network.dart  placeholder.dart  sample_model.data-00000-of-00001  sample_model.index  tensorboard.dart  variable.dart
example/sample_model/: sample_model.data-00000-of-00001  sample_model.index
example/saved_models/: saved_model.pb
example/saved_models/variables/: variables.data-00000-of-00001  variables.index
lib/: CMakeLists.txt  tensorflow.dart
lib/src/: CMakeLists.txt  tensorflow.dart
lib/src/cpp/: tensorflow_dart.cc  tensorflow_dart.h
lib/src/cpp/tfd/: function_node.cc  function_node.h  graph.cc  graph.h  operation.cc  operation.h  saved_model_bundle.cc  saved_model_bundle.h  session.cc  session.h  tensor.cc  tensor.h  tfd.h  util.cc  util.h
lib/src/dart/: control_flow.dart  data.dart  enums.dart  error.dart  function_node.dart  gradient_tape.dart  graph.dart  graph_old.dart  op_def.dart  operation.dart  operation_description.dart  optimizer.dart  output.dart  resource_variable.dart  saved_model_bundle.dart  session.dart  shape.dart  tensor.dart  tensorboard.dart  variable.dart
lib/src/proto/: allocation_description.pb.dart  allocation_description.pbenum.dart  allocation_description.pbjson.dart  allocation_description.pbserver.dart  allocation_description.proto  any.pb.dart  any.pbenum.dart  any.pbjson.dart  any.pbserver.dart  attr_value.pb.dart  attr_value.pbenum.dart  attr_value.pbjson.dart  attr_value.pbserver.dart  attr_value.proto  cluster.pb.dart  cluster.pbenum.dart  cluster.pbjson.dart  cluster.pbserver.dart  cluster.proto  config.pb.dart  config.pbenum.dart  config.pbjson.dart  config.pbserver.dart  config.proto  cost_graph.pb.dart  cost_graph.pbenum.dart  cost_graph.pbjson.dart  cost_graph.pbserver.dart  cost_graph.proto  debug.pb.dart  debug.pbenum.dart  debug.pbjson.dart  debug.pbserver.dart  debug.proto  function.pb.dart  function.pbenum.dart  function.pbjson.dart  function.pbserver.dart  function.proto  graph.pb.dart  (+64 more)
logo/: tensorflow-layout.svg.xcf
test/: function_test.dart  graph_test.dart  session_test.dart  tensor_test.dart
tool/: .travis.sh  build.dart  build_and_test.sh  download_tensorflow.sh  generate_ops.dart
